aggiunta possibilità di inviare sezioni di grosse dimensioni